Change intro logo and container size

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,5 @@
 <div class="firstContainer">
-    <img class="img1" src="img/UWGH_Logo_Color.png" alt="">
+    <img class="img1" src="img/presents.png" alt="">
     <img class="img2" src="img/whiteGolfer3.png" alt=""/>
 </div>
 <div class="secondContainer">
